RESOLVED FIXED277782
REGRESSION (279847@main): Expanding threaded emails in Fastmail web UI results in missing content, repaint artifacts, broken rendering
https://bugs.webkit.org/show_bug.cgi?id=277782
Summary REGRESSION (279847@main): Expanding threaded emails in Fastmail web UI result...
Simon Fraser (smfr)
Reported 2024-08-07 16:50:13 PDT
Fastmail and Google Sheets have some repaint bugs after 279847@main
Attachments
Simon Fraser (smfr)
Comment 1 2024-08-07 16:50:29 PDT
Simon Fraser (smfr)
Comment 2 2024-08-07 16:51:51 PDT
Simon Fraser (smfr)
Comment 3 2024-08-07 16:57:14 PDT
EWS
Comment 4 2024-08-08 08:36:37 PDT
Committed 281993@main (b72f845e52d9): <https://commits.webkit.org/281993@main> Reviewed commits have been landed. Closing PR #31872 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.